# hex-template

./: .gitignore  main.py  pyproject.toml
src/: types.py
src/adapters/api/: base_rmq_consumer.py  user_rmq_consumer.py
src/adapters/spi/: logger.py  rmq_publisher.py
src/adapters/spi/base/: pg_base_model.py  pg_base_repo.py  pg_connection.py  pg_uow.py
src/config/: container.py  settings.py
src/core/ports/api/: consumer.py
src/core/ports/spi/: publisher.py
