[tool.poetry]
name = "hexagonal-template"
version = "0.1.0"
description = ""
authors = ["harut <harut.avetisyan2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
greenlet = "^3.1.1"
pydantic = "^2.9.2"
fastapi = "^0.115.0"
pydantic-settings = "^2.5.2"
faststream = "^0.5.23"
dependency-injector = "^4.42.0"
uvicorn = "^0.30.6"
python-json-logger = "^2.0.7"
aio-pika = "^9.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
